--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ MONGO_PASSWORD=hunter2
 MONGO_HOST=localhost
 MONGO_PORT=27017
 COMPOSE_PROJECT_NAME=trauplin
-
+JWT_SECRET=your_jwt_secret_key
+PORT=8000
