--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,38 @@
 services:
   db:
     image: mongo:latest
-    # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
-    #   MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
-    #   MONGO_INITDB_DATABASE: ${MONGO_DB}
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
     ports:
       - "27017:27017"
+    expose:
+      - 27017
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    networks:
+      - external-network
 
-  # api:
-  #   build: .
-  #   ports:
-  #     - 8000:8000
-  #   environment:
-  #     MONGO_HOST: db
-  #     MONGO_USER: ${MONGO_USER}
-  #     MONGO_PASSWORD: ${MONGO_PASSWORD}
-  #     MONGO_DB_NAME: ${MONGO_DB_NAME}
-  #     RABBITMQ_HOST: ${RABBITMQ_HOST}
-  #   depends_on:
-  #     - db
-  #   restart: on-failure
+
+  api:
+    image: upanshu21/yelp-app-15
+    ports:
+      - 8000:8000
+    expose:
+      - 8000
+    environment:
+      MONGO_HOST: db
+      MONGO_USER: ${MONGO_USER}
+      MONGO_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_DB_NAME: ${MONGO_DB_NAME}
+      RABBITMQ_HOST: ${RABBITMQ_HOST}
+    depends_on:
+      - db
+    restart: on-failure
+    networks:
+      - external-network
+      
+networks:
+  external-network:
+    external: true
